--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     />
   </head>
   <body>
+
+    <div class="body-bg"></div>
     <div class="phone">
       <div class="phone-wrapper">
         <img src="./bg.jpg" class="music-bg" />
@@ -55,7 +57,20 @@
         </div>
       </div>
     </div>
-    
+
+    <div class="modal">
+        <div class="modal-header">
+           <h6> Hatırlatma !</h6>
+        </div>
+        <div class="modal-body">
+            "Çok sevdiğin ama geri döndüremeyeceğin kişiler, her hatırladığında seni tekrar tekrar terk eder." <br>
+            <h6>Tolstoy</h6>
+        </div>
+        <div class="modal-footer">
+            <button id="directPlay">Geç</button>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
   </body>
