dert eklendikçe müzik ekleniyor.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="song-body">
           <!-- Song title-->
           <div class="song-title">
-            <h3 class="song-artist">Kahraman Deniz</h3>
-            <h4 class="song-name">Suç Mahalli</h4>
+            <h3 class="song-artist">Pilli Bebek</h3>
+            <h4 class="song-name">Haram Geceler</h4>
           </div>
 
           <!-- Song time-->
