--- a/index.html
+++ b/index.html
@@ -1,77 +1,12 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kimseyi Sevme</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-
-    <div class="body-bg"></div>
-    <div class="phone">
-      <div class="phone-wrapper">
-        <img src="./bg.jpg" class="music-bg" />
-
-        <!-- Song body-->
-        <div class="song-body">
-          <!-- Song title-->
-          <div class="song-title">
-            <h3 class="song-artist">Pilli Bebek</h3>
-            <h4 class="song-name">Haram Geceler</h4>
-          </div>
-
-          <!-- Song time-->
-          <div class="time">
-            00:00
-            <span></span>
-            00:00
-          </div>
-
-          <!-- Song duration -->
-          <div class="song-duration">
-            <div class="duration-range"></div>
-          </div>
-
-          <!-- Song control -->
-          <div class="song-control">
-            <button id="prev"><i class="fas fa-step-backward"></i></button>
-            <button id="play"><i class="fas fa-play"></i></button>
-            <button id="next"><i class="fas fa-step-forward"></i></button>
-          </div>
-          <a href="https://github.com/ibrahimgediktr" target="_blank" class="me">İbrahim Gedik</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal">
-        <div class="modal-header">
-           <h6> Hatırlatma !</h6>
-        </div>
-        <div class="modal-body">
-            "Çok sevdiğin ama geri döndüremeyeceğin kişiler, her hatırladığında seni tekrar tekrar terk eder." <br>
-            <h6>Tolstoy</h6>
-        </div>
-        <div class="modal-footer">
-            <button id="directPlay">Geç</button>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="app.js"></script>
-  </body>
-</html> -->
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
