--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kimseyi Sevme</title>
+    <title>Javascript Music Player</title>
     <link rel="stylesheet" href="style.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,32 +23,28 @@
   </head>
   <body>
 
-    <div class="body-bg"></div>
     <div class="phone">
       <div class="phone-wrapper">
         <img src="./bg.jpg" class="music-bg" />
-
-        <!-- Song body-->
+        <button id="openLibraryBtn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M4 17.162l-2 .838v-12.972l12-5.028v2.507l-10 4.19v10.465zm18-11.162l-12 5.028v12.972l12-5.028v-12.972zm-14 3.697l10-4.19v-2.507l-12 5.028v12.972l2-.838v-10.465z"/></svg>
+        </button>
         <div class="song-body">
-          <!-- Song title-->
+          <img src="" alt="" class="song-img">
           <div class="song-title">
-            <h3 class="song-artist">Pilli Bebek</h3>
-            <h4 class="song-name">Haram Geceler</h4>
+            <h3 class="song-artist"></h3>
+            <h4 class="song-name"></h4>
           </div>
-
-          <!-- Song time-->
           <div class="time">
             00:00
             <span></span>
             00:00
           </div>
 
-          <!-- Song duration -->
           <div class="song-duration">
             <div class="duration-range"></div>
           </div>
 
-          <!-- Song control -->
           <div class="song-control">
             <button id="prev"><i class="fas fa-step-backward"></i></button>
             <button id="play"><i class="fas fa-play"></i></button>
@@ -55,21 +52,17 @@
           </div>
           <a href="https://github.com/ibrahimgediktr" target="_blank" class="me">İbrahim Gedik</a>
         </div>
+        <div class="libraries">
+          <button id="closeLibraryBtn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M23 20.168l-8.185-8.187 8.185-8.174-2.832-2.807-8.182 8.179-8.176-8.179-2.81 2.81 8.186 8.196-8.186 8.184 2.81 2.81 8.203-8.192 8.18 8.192z"/></svg>
+          </button>
+          <ul class="music-list">
+
+          </ul>
+        </div>
       </div>
     </div>
 
-    <div class="modal">
-        <div class="modal-header">
-           <h6> Hatırlatma !</h6>
-        </div>
-        <div class="modal-body">
-            "Çok sevdiğin ama geri döndüremeyeceğin kişiler, her hatırladığında seni tekrar tekrar terk eder." <br>
-            <h6>Tolstoy</h6>
-        </div>
-        <div class="modal-footer">
-            <button id="directPlay">Geç</button>
-        </div>
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
